--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@t3-oss/env-nextjs": "^0.12.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.6.3",
-    "itzam": "^2.1.18",
+    "itzam": "2.1.21",
     "lucide": "^0.487.0",
     "lucide-react": "^0.487.0",
     "next": "^15.2.3",
