--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "next": "^15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.1.0",
     "three": "^0.175.0",
     "zod": "^3.24.2"
